Update registered after snapshot only